fix layout issue on mobile

--- a/src/styles/Services.module.scss
+++ b/src/styles/Services.module.scss
@@ -63,7 +63,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    height: 3200px;
+    height: 3300px;
     width: 100%;
 
     .float {
@@ -98,7 +98,7 @@
     bottom: 20px;
     max-width: 1400px;
     width: 100%;
-    height: 2300px;
+    height: 2500px;
     z-index: 1000;
     // margin-bottom: 200px;
 }
@@ -123,6 +123,9 @@
 
     }
     
+    .sectionTwo {
+        height: 3000px;
+    }
 }
 
 @media screen and (max-width: 650px) { //phone
@@ -173,7 +176,7 @@
 
     .sectionTwo {
         top: 500px;
-        height: 3550px;
+        height: 4000px;
     }
 
     .photoOfMe {
